css variables are added

--- a/src/containers/LeftContainer/style.module.css
+++ b/src/containers/LeftContainer/style.module.css
@@ -2,5 +2,5 @@
     width: 30vw;
     height: 100vh;
     float: left;
-    background-color: #323d6b;
+    background-color: var(--softDeepBlue);
 }
