--- a/src/containers/LeftContainer/LeftContainer.module.css
+++ b/src/containers/LeftContainer/LeftContainer.module.css
@@ -1,6 +1,7 @@
 .leftContainer {
     width: 30vw;
     height: 100vh;
+    position: relative;
     float: left;
     background-color: var(--softDeepBlue);
 }
